# hchess

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  ghcup-set.sh  hchess.cabal
app/: Main.hs
app/HChess/: Board.hs  Check.hs  Color.hs  Common.hs  Game.hs  GameResult.hs  Move.hs  MoveOrder.hs  Piece.hs  Utils.hs  ValidMoves.hs
app/HChess/Core/: AlgebraicNotation.hs  Board.hs  Check.hs  Color.hs  Common.hs  Game.hs  GameResult.hs  LegalMoves.hs  Move.hs  MoveOrder.hs  Piece.hs  PossibleMoves.hs  ValidMoves.hs
app/HChess/Core/Board/: File.hs  Movement.hs  Rank.hs  Square.hs
app/HChess/Core/Game/: Internal.hs
app/HChess/Core/LegalMoves/: Simple.hs  Special.hs
app/HChess/Core/PossibleMoves/: Simple.hs  Special.hs
app/HChess/Core/ValidMoves/: Simple.hs  Special.hs
app/HChess/Game/: Internal.hs
app/HChess/ValidMoves/: Simple.hs
