cabal-version:      2.4

name:               hchess
version:            0.1.0.0
author:             Martin Sosic
maintainer:         sosic.martin@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  CHANGELOG.md
  README.md

common common-all
  default-language: Haskell2010
  ghc-options:
    -Wall
    -- -optP-Wno-nonportable-include-path avoids warning caused by
    -- .../autogen/cabal_macros.h. on OSX.
    -optP-Wno-nonportable-include-path
    -- -fwrite-ide-info and -hiedir=.hie tell GHC to write compile-time
    -- information about the code to .hie directory. This information can then be
    -- used by other tools, e.g. stan (static analyzer).
    -fwrite-ide-info -hiedir=.hie
  default-extensions:
    OverloadedStrings
    TemplateHaskell
    QuasiQuotes
    ScopedTypeVariables

common common-exe
  ghc-options:
    -threaded -rtsopts -with-rtsopts=-N

executable hchess
  import: common-all, common-exe
  main-is: Main.hs

  -- Modules included in this executable, other than Main.
  other-modules:
    HChess.Core.Board
    HChess.Core.Board.File
    HChess.Core.Board.Movement
    HChess.Core.Board.Rank
    HChess.Core.Board.Square
    HChess.Core.Check
    HChess.Core.Color
    HChess.Core.Common
    HChess.Core.Game
    HChess.Core.Game.Internal
    HChess.Core.GameResult
    HChess.Core.Move
    HChess.Core.MoveOrder
    HChess.Core.Piece
    HChess.Core.ValidMoves
    HChess.Core.ValidMoves.Simple
    HChess.Utils

  build-depends:    base ^>=4.14.3.0,
                    containers ^>=0.6.5.1
  hs-source-dirs:   app
